--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </div>
 
 <div class="header">
-  <h1>Header</h1>
-  <p>Resize the browser window to see the responsive effect.</p>
+  <h1>Re-read</h1>
+  <p>En Re-Read podrás encontrar libros de segunda mano en perfecto estado. También vender los tuyos. Porque siempre hay libros leídos y libros por leer. Por eso Re-compramos y Re-vendemos para que nunca te quedes sin ninguno de los dos.</p>
 </div>
 
 <div class="row">
@@ -23,9 +23,9 @@
   <div class="column left">
 
      <div class="topnav">
-       <a href="#">Link</a>
-       <a href="#">Link</a>
-       <a href="#">Link</a>
+       <a href="#">Re-Read</a>
+       <a href="#">Libros</a>
+       <a href="#">eBooks</a>
      </div>
               
     <h2>Main Content</h2>
@@ -35,7 +35,7 @@
   
   <div class="column right">
     <h2>Side</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+    <p>Cien años de soledad.</p>
   </div>
 </div>
   
